[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/icons/ship.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/react.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/cloud.png" type="Texture" id=3]
[ext_resource path="res://prefabs/ui/game/planet_details/planet_details.gd" type="Script" id=4]
[ext_resource path="res://assets/icons/car-arrow-right.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/shield-lock-outline.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/cube.png" type="Texture" id=7]
[ext_resource path="res://prefabs/ui/game/planet_details/ship_distribution/ship_distribution.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/icons/arrow-right.png" type="Texture" id=10]
[ext_resource path="res://assets/icons/image-filter-hdr.png" type="Texture" id=11]

[node name="PlanetDetails" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Info" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 20.0

[node name="LabelSelection" type="Label" parent="VBoxContainer/Info"]
margin_top = 3.0
margin_right = 616.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Title"

[node name="BtnClose" type="Button" parent="VBoxContainer/Info"]
margin_left = 620.0
margin_right = 640.0
margin_bottom = 20.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DistributionLabel" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 640.0
margin_bottom = 54.0

[node name="ShipsLabel" type="Label" parent="VBoxContainer/DistributionLabel"]
margin_top = 5.0
margin_right = 600.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Ships"

[node name="ShipCount" type="Label" parent="VBoxContainer/DistributionLabel"]
margin_left = 604.0
margin_top = 5.0
margin_right = 612.0
margin_bottom = 19.0
text = "1"

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/DistributionLabel"]
margin_left = 616.0
margin_right = 640.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )

[node name="ShipDistribution" parent="VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 640.0
margin_bottom = 262.0

[node name="Convertion" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 272.0
margin_right = 640.0
margin_bottom = 296.0
alignment = 1

[node name="ConvertFromAmount" type="Label" parent="VBoxContainer/Convertion"]
margin_left = 249.0
margin_top = 5.0
margin_right = 257.0
margin_bottom = 19.0
text = "2"

[node name="TextureAsteroidRock" type="TextureRect" parent="VBoxContainer/Convertion"]
margin_left = 261.0
margin_right = 285.0
margin_bottom = 24.0
texture = ExtResource( 11 )

[node name="TextureConvertionArrowEnd" type="TextureRect" parent="VBoxContainer/Convertion"]
margin_left = 289.0
margin_right = 313.0
margin_bottom = 24.0
texture = ExtResource( 10 )

[node name="ConvertToAmount" type="Label" parent="VBoxContainer/Convertion"]
margin_left = 317.0
margin_top = 5.0
margin_right = 325.0
margin_bottom = 19.0
text = "1"

[node name="ConvertToTitanium" type="TextureButton" parent="VBoxContainer/Convertion"]
margin_left = 329.0
margin_right = 353.0
margin_bottom = 24.0
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 6 )

[node name="LabelConvertionDivider" type="Label" parent="VBoxContainer/Convertion"]
margin_left = 357.0
margin_top = 5.0
margin_right = 362.0
margin_bottom = 19.0
text = "/"

[node name="ConvertToAstralDust" type="TextureButton" parent="VBoxContainer/Convertion"]
margin_left = 366.0
margin_right = 390.0
margin_bottom = 24.0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 6 )

[node name="Production" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 306.0
margin_right = 640.0
margin_bottom = 336.0
alignment = 1

[node name="BtnShip" type="MenuButton" parent="VBoxContainer/Production"]
margin_left = 288.0
margin_right = 324.0
margin_bottom = 30.0
icon = ExtResource( 1 )

[node name="BtnResearch" type="TextureButton" parent="VBoxContainer/Production"]
margin_left = 328.0
margin_right = 352.0
margin_bottom = 30.0
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 6 )

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
margin_top = 346.0
margin_right = 640.0
margin_bottom = 360.0
max_value = 1.0

[node name="DebugCurrentProduction" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 246.0
margin_right = 220.0
margin_bottom = 260.0
[connection signal="pressed" from="VBoxContainer/Info/BtnClose" to="." method="_on_close"]
[connection signal="pressed" from="VBoxContainer/DistributionLabel/TextureButton" to="." method="_on_ship_movement"]
[connection signal="gui_input" from="VBoxContainer/ShipDistribution" to="." method="_on_planet_change_distribution_input"]
[connection signal="pressed" from="VBoxContainer/Production/BtnShip" to="." method="_on_production_ship"]
